[package]
name = "cooperative-crosswords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4"
actix-web-actors = "4.3.1"
chrono = "0.4.39"
env_logger = "0.11.6"
futures = "0.3.31"
reqwest = "0.12.12"
scraper = "0.22.0"
r2d2 = "0.8.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
itertools = "0.14.0"
tokio = { version = "1.0", features = ["full"] }
